# Slim

classifypass/: CMakeLists.txt  CallClassifierPass.cpp
classifypass/tests/: IndirectDirectCalls.c  IndirectDirectCalls.ll  ao.ll  highcalls.c  highcalls.ll  smallpt.cpp  smallpt.cpp.ll
custompass/: AssignmentClassifierPass.cpp  CMakeLists.txt
custompass/tests/: output.ll  test4.c
custompass1/: CMakeLists.txt  ConditionalClassifierPass.cpp
custompass1/tests/: test4.ll
custompass2/: CMakeLists.txt  ConstantPropagationPass.cpp
custompass2/tests/: input.ll  test1.c  test1.ll
